codama-macros/tests/node_attribute/double_node.fail.stderr
error: node is already set
 --> tests/node_attribute/double_node.fail.rs:3:30
  |
3 | #[node(number_type(u32, le), public_key_type())]
  |                              ^^^^^^^^^^^^^^^^^
